# ESPHome-Meshtastic-MQTT

./: .gitignore  README.md  meshtastic_gw.yaml  secrets.yaml.example
components/meshtastic_ble/: CMakeLists.txt  __init__.py  ble_uuids.h  gatt_defs.h  meshtastic_ble.cpp  meshtastic_ble.h
docs/esphome/: README.md  codegen.md  config-validation.md  cpp-component.md  custom-component.md  esp-idf-framework.md  mqtt-api.md
docs/meshtastic/: Client API (Serial_TCP_BLE) _ Meshtastic.html  README.md  ble-gatt.md  nimble-esp-idf.md  portnums.md  protobufs.md
scripts/: gen_proto.sh
